gcc/testsuite/gdc.test/runnable/test20036.d

__gshared int x = 7;
__gshared int*[70000] px = &x;

void main()
{
	foreach(p; px)
		assert(p && *p == 7);
}

