gcc/testsuite/gdc.test/fail_compilation/fail6611.d

void main()
{
    auto x = new int[](10);
    x[]++;
}
